# PDS2

./: .gitignore
VPL/: 1-wordle.cpp  2-ponteiros.cpp  5-STL.cpp
VPL/3-TAD/: .clangd  CMakeLists.txt  Empresa.cpp  Empresa.hpp  Makefile  Onibus.cpp  Onibus.hpp  main.cpp
VPL/4-ListasMakefile/: CMakeLists.txt  Makefile
VPL/4-ListasMakefile/include/C/: list.h  node.h
VPL/4-ListasMakefile/include/CPP/: list.hpp  node.hpp
VPL/4-ListasMakefile/src/C/: list.c  main.c
VPL/4-ListasMakefile/src/CPP/: list.cpp  main.cpp
VPL/6-Alunos/: CMakeLists.txt  aluno.hpp  main.cpp
VPL/6-Alunos/headers/: aluno.hpp
VPL/6-Alunos/src/: aluno.cpp  main.cpp
VPL/7-ListaObj/: CMakeLists.txt  main.cpp
VPL/8-FigurasGeometricas/: CMakeLists.txt  input1.in  input3.in  main2.cpp
VPL/8-FigurasGeometricas/headers/: Circulo.hpp  FiguraGeometrica.hpp  Ponto.hpp  Retangulo.hpp  Triangulo.hpp
VPL/8-FigurasGeometricas/src/: Circulo.cpp  FiguraGeometrica.cpp  Ponto.cpp  Retangulo.cpp  Triangulo.cpp  main.cpp
VPL/9-Template/: CMakeLists.txt
VPL/9-Template/headers/: vetor.hpp
VPL/9-Template/src/: main.cpp
